[fix] Stop text wrapping incorrectly.

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -34,6 +34,14 @@
   filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.275));
 }
 
+.heroTitle {
+  text-align: center;
+}
+
+.heroTitle span {
+  display: inline-block;
+}
+
 .logoRibbon {
   position: absolute;
   display: block;
